# age-ml

./: .gitignore  CHANGELOG.md  README.md  genpipes.py  package-lock.json  package.json  pyproject.toml  release.config.mjs
.github/workflows/: check.yml
ageml/: __init__.py  __main__.py  app.py
ageml/common/: client.py
ageml/evaluation/: agent.py
ageml/execution/: agent.py
ageml/planning/: agent.py  types.py
ageml/specification/: __init__.py  parsing.py  types.py  validation.py
automl-llm/: __main__.py
automlllm/: __init__.py  __main__.py  agent.py  app.py  executingagent.py  mocks.py  planningagent.py  tools.py  validation.py
automlllm/common/: client.py  model.py  timing.py  tools.py  types.py  utils.py
automlllm/evaluation/: agent.py
automlllm/executing/: __init__.py  tools.py
automlllm/execution/: __main__.py  agent.py  code_generation_agent.py  pipeline.py  utils.py
automlllm/langchain/: __init__.py  __main__.py  agent.py
automlllm/langgraph/: __init__.py  __main__.py  agent.py
automlllm/planning/: __init__.py  __main__.py  agent.py  tools.py  types.py  validation.py
automlllm/specification/: __init__.py  parsing.py  types.py  validation.py
experiments/: __main__.py  download_datasets.py  results_csv.py
experiments/results/: generate_experiment_figures.py  results-old.csv  results.csv  (+2 more)
paper/: agentic-automl-idea.md  paper-structure.md
resources/: adult-specification.yml  automl-specification.yml  general-specification.yml  housing-specification.yml  simple-specification.yml
tests/: test_my_class.py  test_validator.py
(+79 files in other folders)
