[tool.poetry]
name = "automl-llm"
packages = [
    { include = "automlllm" },
]
version = "1.0.0"
description = "A template for Python projects, using Poetry"
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
# update the Python versions in .github/workflows/check.yml if you change this
python = "> 3.11.0 < 4.0.0"
langchain = {extras = ["ollama", "openai"], version = "^1.2.7"}
mlflow = "^3.8.1"
scikit-learn = "^1.8.0"
fire = "^0.7.1"
pandas = "^2.3.3"
tabulate = "^0.9.0"
numpy = "^2.4.0"
boto3 = "^1.42.24"
pandas-stubs = "~=2.3.3"
networkx = "^3.6.0"
types-networkx = "^3.6.0.20251127"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.37.0"
poetry = "^1.8.3"
pytest = "^9.0.2"
ruff = "^0.14.8"
types-pyyaml = "^6.0.12.20250915"
types-pygments = "^2.19.0.20251121"
types-pexpect = "^4.9.0.20250916"

[tool.poe.tasks]
test = "pytest"
coverage = "coverage run -m pytest"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
ruff-check = "ruff check"
ruff-fix = "ruff check --fix"
format = "ruff format"
format-check = "ruff format --check"
mypy = "mypy automlllm tests"
compile = "python -m compileall automlllm tests"
static-checks = [
    "ruff-check",
    "mypy",
]

[[tool.mypy.overrides]]
module = ["fire.*"]
follow_untyped_imports = true